Bug 315697, UI hangs when "are you sure you want to quit?" download sheet is displayed and the pref to close the download window is set.  Be careful about putting the sheet up and closing the window.  Patch by Nick Kreeger <nick.kreeger@park.edu>.  Camion-only-npotdb.  r=smfr